--- a/src/app/components/client-list/client-list.component.html
+++ b/src/app/components/client-list/client-list.component.html
@@ -1,31 +1,32 @@
-<ng-template pTemplate="header">
-  Header content here
-</ng-template>
+<div class="client-detail-wrapper">
+  <p-panel [header]="'Список клиентов'">
+    <ng-template #loading>
+      <p-progressSpinner></p-progressSpinner>
+    </ng-template>
+    <p-table
+      *ngIf="clientsData as clients; else loading"
+      [value]="clients"
+      responsiveLayout="scroll"
+      selectionMode="single"
+      styleClass="p-datatable-striped"
+    >
+      <ng-template pTemplate="header">
+        <tr>
+          <th>Наименование организации</th>
+          <th>ИНН</th>
+          <th>Дата открытия счета</th>
+          <th>Остаток на счёте</th>
+        </tr>
+      </ng-template>
+      <ng-template let-client pTemplate="body">
+        <tr (click)="goToClientPage(client.id)">
+          <td>{{client.organizationName}}</td>
+          <td>{{client.inn}}</td>
+          <td>{{client.openingDate | date:'dd MMMM YYYY'}}</td>
+          <td>{{client.accountBalance}}</td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </p-panel>
+</div>
 
-<ng-template #loading>
-  <p-progressSpinner></p-progressSpinner>
-</ng-template>
-<p-table
-  *ngIf="clientsData as clients; else loading"
-  [value]="clients"
-  responsiveLayout="scroll"
-  selectionMode="single"
-  styleClass="p-datatable-striped"
->
-  <ng-template pTemplate="header">
-    <tr>
-      <th>Наименование организации</th>
-      <th>ИНН</th>
-      <th>Дата открытия счета</th>
-      <th>Остаток на счёте</th>
-    </tr>
-  </ng-template>
-  <ng-template let-client pTemplate="body">
-    <tr (click)="goToClientPage(client.id)">
-      <td>{{client.organizationName}}</td>
-      <td>{{client.inn}}</td>
-      <td>{{client.openingDate | date:'dd MMMM YYYY'}}</td>
-      <td>{{client.accountBalance}}</td>
-    </tr>
-  </ng-template>
-</p-table>
