--- a/src/app/components/client-list/client-list.component.html
+++ b/src/app/components/client-list/client-list.component.html
@@ -23,7 +23,11 @@
           <td>{{client.organizationName}}</td>
           <td>{{client.inn}}</td>
           <td>{{client.openingDate | date:'dd MMMM YYYY'}}</td>
-          <td>{{client.accountBalance}}</td>
+          <td>
+            <app-currency-text
+              [amountData]="client.accountBalance"
+            ></app-currency-text>
+          </td>
         </tr>
       </ng-template>
     </p-table>
