стор, интерцептор, вызовы к api

--- a/src/app/components/client-list/client-list.component.html
+++ b/src/app/components/client-list/client-list.component.html
@@ -4,7 +4,7 @@
       <p-progressSpinner></p-progressSpinner>
     </ng-template>
     <p-table
-      *ngIf="clientsData as clients; else loading"
+      *ngIf="(store.clientList$ | async) as clients; else loading"
       [value]="clients"
       responsiveLayout="scroll"
       selectionMode="single"
